[tool.poetry]
name = "autobot"
version = "0.1.0"
description = "A bot for Grand fantasia"
authors = ["Christopher T Herrera"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pywinauto = "^0.6.8"
mss = "^9.0.1"
opencv-python = "^4.8.0.76"
screeninfo = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
